volexc/tests/ui/parse_unclosed_bracket.out
Error: found ';' expected ']'
   ╭─[ parse_unclosed_bracket.vol:3:14 ]
   │
 3 │     bar: [u32;
   │              ┬  
   │              ╰── Unexpected ';'
   │ 
   │ Note: Expected one of: ']'
───╯