volexc/tests/ui/parse_unclosed_bracket.vol
// Unclosed bracket in array type
struct Foo {
    bar: [u32;
}
